formatting changes and fixes
updated docs landing and quizzes landing for consistency in exclamatory
punctuation

updated logo, hopefully the swirly X thingy is easier to see?

updated core.css, fixed unevenness between the primary nav, logo, and
search bar (those are all aligned now, it's great)

--- a/static/css/core.css
+++ b/static/css/core.css
@@ -41,21 +41,24 @@
 .navItemWrapper {
     float: left;
     font-size: 14pt;
-    padding: 12px;
+	padding: 12px;
+    padding-top: 12px;
+	padding-bottom: 8px;
     margin: 2px;
+	margin-top: 6px;
 	border-radius: 9px 9px 0px 0px;
 }
 
 .navItemWrapper:hover{
-background: rgb(169,3,41);
-background: -moz-linear-gradient(top,  rgba(255,12,12,1) 0%, rgba(173,173,173,0) 100%);
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,12,12,1)), color-stop(100%,rgba(173,173,173,0)));
-background: -webkit-linear-gradient(top,  rgba(255,12,12,1) 0%,rgba(173,173,173,0) 100%);
-background: -o-linear-gradient(top,  rgba(255,12,12,1) 0%,rgba(173,173,173,0) 100%);
-background: -ms-linear-gradient(top,  rgba(255,12,12,1) 0%,rgba(173,173,173,0) 100%);
-background: linear-gradient(to bottom,  rgba(255,12,12,1) 0%,rgba(173,173,173,0) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0c0c', endColorstr='#adadad',GradientType=0 );
-border-radius: 9px 9px 0px 0px;
+	background: rgb(169,3,41);
+	background: -moz-linear-gradient(top,  rgba(255,12,12,1) 0%, rgba(173,173,173,0) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,12,12,1)), color-stop(100%,rgba(173,173,173,0)));
+	background: -webkit-linear-gradient(top,  rgba(255,12,12,1) 0%,rgba(173,173,173,0) 100%);
+	background: -o-linear-gradient(top,  rgba(255,12,12,1) 0%,rgba(173,173,173,0) 100%);
+	background: -ms-linear-gradient(top,  rgba(255,12,12,1) 0%,rgba(173,173,173,0) 100%);
+	background: linear-gradient(to bottom,  rgba(255,12,12,1) 0%,rgba(173,173,173,0) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0c0c', endColorstr='#adadad',GradientType=0 );
+	border-radius: 9px 9px 0px 0px;
 }
 
 .localNavWrapper {
@@ -188,7 +191,7 @@ a:visited{
     border-radius: 3px;
     width: 400px;
     position: absolute;
-    top: 42px;
+    top: 38px;
     box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.4);
     display: none;
 }
@@ -234,7 +237,7 @@ a:visited{
 #Search {
     float: right;
     width: 400px;
-    margin-top: 18px;
+    margin-top: 14px;
     margin-right: 20px;
 }
 
